--- a/index.css
+++ b/index.css
@@ -16,6 +16,14 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 
+.date {
+  display: flex;
+  justify-content: center;
+  color: var(--text-secondary);
+  text-align: center;
+  margin-bottom: var(--spacing-2xl);
+}
+
 .currency-selector {
   display: flex;
   align-items: center;
